--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
         <h1>This is Arpit Punia's Portfolio</h1>
         <h2>I am a Web Developer</h2>
         <hr />
-        <a href="./public/Movie Rankings.html">Movie Ranking Project</a> <br />
+        <a href="./public/Movie Rankings.html">Web Series Ranking Project</a> <br />
         <img src="./assets/images/Movie Rankings.png" width="300" alt="Preview of Movie Rankings Project"> <br >
         <a href="./public/Birthday Invite.html">Birthday Invite Project</a> <br />
         <img src="./assets/images/Birthday Invite.png" width="300" alt="Previewe of Birthday Invite Project">
