--- a/public/Movie Rankings.html
+++ b/public/Movie Rankings.html
@@ -1,4 +1,4 @@
-<h1>The best movies According to Arpit</h1>
+<h1>The best Web Series According to Arpit</h1>
     <h2>My top 3 web series of all time.</h2>
     <hr \>
         <h3>Friends</h3>
